[project]
name = "repl-nix-microbioviz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "streamlit>=1.40.0",
]
